--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+
+    <!-- Usado para definir os META ou seja quais serão as informações de busca -->
     <meta charset="UTF-8">
     <meta name="description" content="Siga, Curta e Compartilhe nossas Redes Mídias Sociais">
     <meta name="og:title" property="og:title" content="Your Open Graph Title Goes Here">
@@ -8,53 +11,57 @@
     <link rel='stylesheet' href='estilo.css'>
     <script src='main.js'></script>
 
+    <!-- Qual o titulo da pagina ira ser usado pelo SEO&SEM -->
     <title>Mídias_Sociais</title>
 </head>
+
 <body>
-    <!- Anotacao para ser usado nesta pagina ->
+    <!-- Anotacao para ser usado nesta pagina -->
     <div class="topnav">
-    <!- Aqui fica os link do site ->
-    <a href="inicio.html">_HOME 🏠</a>
-	<!- Começo da pagina, não.//Link de acesso a pagina html com o nome inicio.html ->
-    <a href="qsomos.html">_QUEM_SOMOS 📚</a>
-    <a href="jobss.html">_CLIENTES 🤑</a>
-    <a href="apping.html">_APLICAÇÕES 🛒</a>
-    <a href="contat.html">_CONTATO 💬</a>
+        <!--Aqui fica os link do site -->
+        <a href="inicio.html">_HOME 🏠</a>
+        <!-- Começo da pagina, não.//Link de acesso a pagina html com o nome inicio.html -->
+        <a href="qsomos.html">_QUEM_SOMOS 📚</a>
+        <a href="jobss.html">_CLIENTES 🤑</a>
+        <a href="apping.html">_APLICAÇÕES 🛒</a>
+        <a href="contat.html">_CONTATO 💬</a>
     </div>
-
+    <!-- Inicio da DIV usada para colocar os conteudos do site -->
     <div class="content">
+        <!-- Anotacao para ser usado nesta pagina -->
 
-  <h1>Olá Mundo!</h1>  
+        <h1>Olá Mundo!</h1>
 
-    <p>Ufa quebrei a maldição</p>
+        <!-- Anotacao para ser usado nesta pagina -->
+        <p>Ufa quebrei a maldição</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-        Iusto maxime, porro sapiente architecto, 
-        vitae iure iste omnis unde dolores id eveniet alias a, 
-        aperiam harum explicabo labore nostrum enim perspiciatis?</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Iusto maxime, porro sapiente architecto, 
-            vitae iure iste omnis unde dolores id eveniet alias a, 
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Iusto maxime, porro sapiente architecto,
+            vitae iure iste omnis unde dolores id eveniet alias a,
             aperiam harum explicabo labore nostrum enim perspiciatis?</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Iusto maxime, porro sapiente architecto, 
-            vitae iure iste omnis unde dolores id eveniet alias a, 
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Iusto maxime, porro sapiente architecto,
+            vitae iure iste omnis unde dolores id eveniet alias a,
             aperiam harum explicabo labore nostrum enim perspiciatis?</p>
 
-    <p>Isso é um exemplo de texto na pagina de Web</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Iusto maxime, porro sapiente architecto,
+            vitae iure iste omnis unde dolores id eveniet alias a,
+            aperiam harum explicabo labore nostrum enim perspiciatis?</p>
 
-    <img src="goku_png.png" alt="Siga, Curta e Compartilhe nossas Redes Mídias Sociais">
+        <p>Isso é um exemplo de texto na pagina de Web</p>
+        <!-- Anotacao para ser usado nesta pagina -->
+        <img src="goku_png.png" alt="Siga, Curta e Compartilhe nossas Redes Mídias Sociais">
     </div>
-
+    <!-- Anotacao para ser usado nesta pagina -->
     <link href="URL" rel="canonical">
-
+    <!-- Anotacao para ser usado nesta pagina -->
     <div class="footer">
         🧥@ivanpaulinodasilva (linkedin) site construindo em 2024 🎁<br>
-        🐙https://github.com/ivanpaulinodasilva
-
+        🐙'https://github.com/ivanpaulinodasilva'
     </div>
 
 </body>
+
 </html>
