--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Siga, Curta e Compartilhe nossas Redes Mídias Sociais">
     <meta name="og:title" property="og:title" content="Your Open Graph Title Goes Here">
     <meta name="robots" content="index, follow">
+    
+   <!-- Anotacao para ser usado nesta pagina -->
     <link rel='stylesheet' href='estilo.css'>
     <script src='main.js'></script>
 
